    color registers (except when running from ROM)
  - Better detection of bottom border removal on a 60 Hz screen
  - support for color change during only 4 cycles
  - better bitmap/color alignment for STE med res overscan at 60 Hz
  - Set default value of nSpec512Threshold to "1" instead of "16"
  - Update the position of the next VBL when 50Hz and 60Hz lines are mixed
- Videl changes :
  - correct masking of the true color palette registers
- CPU changes :
  - Fix a case when MFP's interrupt happens during the IACK sequence
    for HBL/VBL
  - Many prefetch changes required by some game's protection
- Sound changes :
  - Fix STE sound mixing using LMC when mixer=0 (DMA sound only)
  - Fix some crossbar's sound errors for Falcon
- FDC changes :
  - Add configurable RPM speed for each floppy drive and the possibility
    to turn each drive ON/OFF.
  - Correct timings, behaviour and status register for all commands
    when a drive is OFF or empty.
  - Rewrite the index pulse part and all the delays expressed as disk's
    revolution
  - Add support for the "Force Int on Index Pulse" command.
  - Rewrite the DMA functions for better accuracy
  - Add support for IPF/CTR files by using the capsimage library
  - Add open source support for Pasti STX files, including random/fuzzy bits
    and variable length bits
  - Don't force drives A and B at $4c2, keep the values detected by TOS
  - Many other timing / status register improvements
- GEMDOS HD emulation:
  - Fix: clip filenames given through GEMDOS calls to 8+3
    lenght using first '.'
- ACSI hard disk changes:
  - Fixed/improved READ CAPACITY and INQUIRY commands
  - Unsupported commands are now handled correctly
  - Now using fseeko() instead of fseek() for supporting large images
- Other changes:
  - Don't enable MegaST's real time clock by default, it can cause some
    crashes in STF/STE mode
  - Improve ACIA's wait state with E clock
  - Add support for IKBD commands 0x11 and 0x13 (resume/pause output)