@@ -1314,8 +1314,8 @@ are just STE enhanced.  These are marked with '*'.</p>
     </tr>
     <tr>
       <td>Leavin' Teramis*</td>
-      <td>before 1.0</td>
-      <td>Works <em>only</em> in STE mode</td>
+      <td>&nbsp;</td>
+      <td>Loader text was not correctly displayed with Hatari &lt; 1.8</td>
     </tr>
     <tr>
       <td><a href="http://paradize.final-memory.org/games.shtml">Manga Puzzle</a></td>
